2005-05-30	Benedikt Meurer <benny@xfce.org>

	* exo/exo-mime-database.{c,h}: Don't use separate private data
	  structure.
	* exo/exo-mime-info.{c,h}: Add exo_mime_info_get_media(),
	  exo_mime_info_get_subtype() and exo_mime_info_lookup_icon() methods.
	* python/exo.defs, python/exo.override: Add new methods to the Python
	  bindings.

2005-05-30	Benedikt Meurer <benny@xfce.org>

	* exo/Makefile.am: We don't use D-Bus any longer, so no need to keep
	  that define around.

2005-05-29	Benedikt Meurer <benny@xfce.org>

	* exo/exo-mime-database.h: Fix missing function declaration.

2005-05-29	Benedikt Meurer <benny@xfce.org>

	* exo/xdgmime/: Import the xdgmime module from freedesktop.org.
	* exo/exo-mime-info.{c,h}, exo/exo-mime-database.{c,h}: Add two new
	  classes ExoMimeDatabase and ExoMimeInfo to provide a high-level
	  interface to the Shared MIME Database. We currently use xdgmime as
	  backend, but that may change over time.
	* configure.ac, exo/Makefile.am, exo/exo.h: Add the new classes to the
	  build framework.
	* python/examples/toolbars.py: Fix typo.
	* exo/exo-private.{c,h}: Import the MIME parser from the filer
	  repository, which is used to query the comment for a given MIME
	  type.
	* python/exo.defs: Add the ExoMimeDatabase and ExoMimeInfo classes to
	  the Python bindings.
	* python/examples/mime.py: Add a short example of how to use the MIME
	  module from a Python script.

2005-03-17	Benedikt Meurer <benny@xfce.org>

	* configure.ac, po/ja.po, THANKS, NEWS: Add ja translations, thanks to
	  Daichi Kawahata <daichik@users.sourceforge.net>.
	* docs/reference/tmpl/*.sgml: Regenerate with updated gtk-doc.

2005-03-13	Benedikt Meurer <benny@xfce.org>

	* HACKING: Add several missing points to the Release process.
	* configure.ac: Bump version to 0.3.1svn.

2005-03-13	Benedikt Meurer <benny@xfce.org>

	* configure.ac, NEWS: Version 0.3.0.
	* docs/reference/exo-docs.sgml: Update date.
	* po/: Run "make update-po".
	* po/de.po: Update the header.
